slv2 (9999) unstable; urgency=low

  * NOT YET RELEASED
  * Add slv2_port_get_value (analogous to slv2_plugin_get_value).
  * Add slv2_instance_get_extension_data.
 
 -- Dave Robillard <dave@drobilla.net>  Sun, 01 Jan 9999 00:00:00 -0400

slv2 (0.6.0) unstable; urgency=low

  * Rework API to reduce dependence of SLV2 on specific LV2 features
  * Use SLV2Value most everywhere in the API for type safety and
    performance reasons
  * Typical use case performance improvements
  * Add support for scale points
  * Use new Redland "trees" store for dramatic performance improvements
  * *** API BREAK ***
 
 -- Dave Robillard <dave@drobilla.net>  Sun, 06 Jul 2008 13:11:15 -0400

slv2 (0.5.0) unstable; urgency=low

  * Update LV2 UI header (API break)
  * *** API BREAK ***
 
 -- Dave Robillard <dave@drobilla.net>  Thu, 17 Jan 2008 18:34:29 -0500

slv2 (0.4.5) unstable; urgency=low

  * Fix redland librdf_free_query_results warning
  * Use "memory" store instead of "hashes" store for plugin RDF data,
    resulting in extreme speedups in some cases.
 
 -- Dave Robillard <dave@drobilla.net>  Tue, 15 Jan 2008 19:22:21 -0500

slv2 (0.4.4) unstable; urgency=low

  * Add slv2_port_has_property
  * Add slv2_plugin_has_feature
  * Add plugin template and port signature interface for much faster plugin
    discovery with port input/output/type inspection.
 
 -- Dave Robillard <dave@drobilla.net>  Tue, 15 Jan 2008 10:43:00 -0500
 
slv2 (0.4.3) unstable; urgency=low

  * Fix lv2_inspect command line handling bug (always prints help)
  * Fix case where multiple plugins are described in the same file
    (avoid port symbol clashing).
 
 -- Dave Robillard <dave@drobilla.net>  Thu, 10 Jan 2008 20:03:19 -0500
 
slv2 (0.4.2) unstable; urgency=low

  * Update for LV2 specification release 1
 
 -- Dave Robillard <dave@drobilla.net>  Tue, 08 Jan 2008 20:16:56 -0500
 
slv2 (0.4.1) unstable; urgency=low

  * Debian packaging (no functional changes)
 